# DachaSensorSystem

./: .gitignore  CMakeLists.txt  Logger.h  README.md  main.cpp
Client_test/: CMakeLists.txt  main.cpp
ConfigLoader/: CMakeLists.txt
ConfigLoader/include/ConfigLoader/: ConfigLoader.h
ConfigLoader/src/: ConfigLoader.cpp
Database/: CMakeLists.txt
Database/include/Database/: Database.h
Database/src/: Database.cpp
DatabaseClient/: CMakeLists.txt
DatabaseClient/include/DatabaseClient/: DatabaseClient.h
DatabaseClient/src/: DatabaseClient.cpp
DatabaseConnector/: CMakeLists.txt
DatabaseConnector/include/DatabaseConnector/: DatabaseConnector.h
DatabaseConnector/src/: DatabaseConnector.cpp
DatabaseInterface/: CMakeLists.txt
DatabaseInterface/include/DatabaseInterface/: DatabaseInterface.h
DatabaseInterface/src/: DatabaseInterface.cpp
DelayedQueryManager/: CMakeLists.txt
DelayedQueryManager/include/DelayedQueryManager/: DelayedQueryManager.h
MessageHandler/: CMakeLists.txt
MessageHandler/include/MessageHandler/: MessageHandler.h
MessageHandler/src/: MessageHandler.cpp
MessageHeader/: CMakeLists.txt
MessageHeader/include/MessageHeader/: MessageHeader.h
MessageHeader/src/: MessageHeader.cpp
SensorMessage/: CMakeLists.txt
SensorMessage/include/SensorMessage/: SensorMessage.h
SensorMessage/src/: SensorMessage.cpp
SensorMessageConverter/: CMakeLists.txt
SensorMessageValidator/: CMakeLists.txt
SensorMessageValidator/include/: CMakeLists.txt
SensorMessageValidator/include/src/: SensorMessageValidator.cpp
SensorServer/: Logger.h
SensorServer/ConfigLoader/src/: ConfigLoader.cpp
SensorServer/DatabaseClient/include/DatabaseClient/: DatabaseClient.h
SensorServer/DatabaseClient/src/: DatabaseClient.cpp
SensorServer/DelayedQueryManager/src/: DelayedQueryManager.cpp
SensorServer/MessageHandler/include/MessageHandler/: MessageHandler.h
SensorServer/MessageHandler/src/: MessageHandler.cpp
SensorServer/SensorMessage/: CMakeLists.txt
SensorServer/SensorMessage/include/SensorMessage/: SensorMessage.h
SensorServer/SensorMessage/include/SensorMessageConverter/: SensorMessageConverter.h
SensorServer/SensorMessage/include/SensorMessageValidator/: SensorMessageValidator.h
SensorServer/SensorMessage/src/: SensorMessageConverter.cpp  SensorMessageValidator.cpp
SensorServer/Server/include/Server/: Server.h
SensorServer/Server/lib/Socket_class/include/Socket_class/: socket_class.h
SensorServer/ServerListener/: CMakeLists.txt
Server/: CMakeLists.txt
Server/include/Server/: Server.h
Server/lib/Socket_class/src/: socket.cpp
Server/src/: Server.cpp
ServerListener/include/ServerListener/: ServerListener.h
Socket_class/: CMakeLists.txt
Telegram_bot_python/: database_client.py  location_places_names.json  main.py  requirements.txt  result_formating.py
TestClient/: CMakeLists.txt  TestClient.cpp  TestClient.h  main.cpp
test/: CMakeLists.txt  main.cpp
